# public.py

./: .travis.yml  README.md  setup.cfg  setup.py
tests/class/: inspect.isclass(CLS)
tests/func/: func()==result  inspect.isfunction(func)
tests/public/examples/: add.py  test.py
