[metadata]
name = public
version = 2018.11.20
url = https://github.com/looking-for-a-job/public.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = public __all__

[options]
install_requires = 
	setuptools
packages = 
	public
