# https://pypi.org/project/setupcfg-generator/
[metadata]
name = public
version = 2019.3.22
url = https://github.com/looking-for-a-job/public.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = public __all__

[options]
install_requires = 
	setuptools
packages = 
	public
